--- a/Hazel/SandBox/imgui.ini
+++ b/Hazel/SandBox/imgui.ini
@@ -4,7 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
-Size=550,680
+Pos=361,26
+Size=452,559
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
 Collapsed=0
 
