--- a/Hazel/SandBox/imgui.ini
+++ b/Hazel/SandBox/imgui.ini
@@ -9,7 +9,30 @@ Size=452,559
 Collapsed=0
 
 [Window][Example: Log]
-Pos=60,60
-Size=500,400
+Pos=0,371
+Size=1280,349
 Collapsed=0
+DockId=0x00000002,0
+
+[Window][ImGui Demo]
+ViewportPos=840,157
+ViewportId=0x080FC883
+Size=550,701
+Collapsed=0
+
+[Window][DockSpace Demo]
+Pos=0,0
+Size=1280,720
+Collapsed=0
+
+[Window][Example: Console]
+ViewportPos=1347,272
+ViewportId=0x46B5E99C
+Size=519,701
+Collapsed=0
+
+[Docking][Data]
+DockSpace   ID=0xFA06BC56 Pos=34,76 Size=1280,701 Split=Y
+  DockNode  ID=0x00000001 Parent=0xFA06BC56 SizeRef=1280,350 CentralNode=1
+  DockNode  ID=0x00000002 Parent=0xFA06BC56 SizeRef=1280,349 SelectedTab=0xBF126D42
 
